@@ -115,7 +115,9 @@ A system that serialize widgets position and configuration
    FT is the ROADMAP file time (C-c C-x C-d)
 
 * v0.0.5-215 (21 jan 2012 - ???) SLOC ??? UT ??? FT ???:??
-- (12) Finished CamelCased all files in client/
+- (13) CamelCased some files in client/
+   FilePreview, FileTypeGuesser, HelpViewer
+- Finished CamelCased all files in client/
    GsUpdateDatafiles, GuiFrameListener, GuiManager, LanguageSelector,
    Launcher, LauncherOptions
 - CamelCased some files in client/
